WallBucket: init WallBucket for CesiumOS [1/3]
- refractor for CesiumOS

- replace wallpapers with CesiumOS wallpapers

- replace app icon with our own WallBucket icon

- remove app translations, stick to EN

Signed-off-by: BunsExynos <himanshuakela@gmail.com>

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -9,21 +9,21 @@
 
 <resources>
     <string-array name="wallpapers" translatable="false">
-        <item>wallpaper_14</item>
-        <item>wallpaper_13</item>
-        <item>wallpaper_12</item>
-        <item>wallpaper_11</item>
-        <item>wallpaper_10</item>
-        <item>wallpaper_9</item>
-        <item>wallpaper_8</item>
-        <item>wallpaper_7</item>
-        <item>wallpaper_6</item>
-        <item>wallpaper_5</item>
-        <item>wallpaper_4</item>
-        <item>wallpaper_3</item>
-        <item>wallpaper_2</item>
-        <item>wallpaper_1</item>
-        <item>wallpaper_0</item>
+        <item>wallpaper15</item>
+        <item>wallpaper14</item>
+        <item>wallpaper12</item>
+        <item>wallpaper11</item>
+        <item>wallpaper10</item>
+        <item>wallpaper09</item>
+        <item>wallpaper08</item>
+        <item>wallpaper07</item>
+        <item>wallpaper06</item>
+        <item>wallpaper05</item>
+        <item>wallpaper04</item>
+        <item>wallpaper03</item>
+        <item>wallpaper02</item>
+        <item>wallpaper01</item>
+        <item>wallpaper00</item>
     </string-array>
 
     <string-array name="wallpaper_options">
