WallBucket: Re-push all wallpaper of high resoultion
- Also introduce adaptive icon for wallpaper app

Signed-off-by: SahilSonar <sss.sonar2003@gmail.com>

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -24,6 +24,7 @@
         <item>wallpaper12</item>
         <item>wallpaper14</item>
         <item>wallpaper15</item>
+		<item>wallpaper16</item>
     </string-array>
 
     <string-array name="wallpaper_options">
